# webapp-starter

./: .env.sample  .prettierignore  Cargo.toml  README.md  bacon.toml  mise.toml
.github/: copilot-instructions.md
.mise-tasks/: pre-commit.sh  revert.sh
.sqlx/: query-08285491147ca24d8058280f48fcf894f4189c2f917b53e0debfa6d669a82c02.json  query-703842ef604a5d0983745cc15914e4efe0011afb7f2f5dfdcde4ea430b67149e.json  query-71e11380b983cd26714b30d972e88cbd3a6a34f8d087a9e7944233f55f611b6f.json  query-b3ba7ef39aeba2502335052256d20c909f2096c508eae4a06554566b9e2bc192.json  query-b6cfd07b9cad906fe26b56cacac5e66819ccca355a514558fe390e2c13ac4f68.json  query-d17a08a438f61b36b0a8825e12b0d2bcdb3e8f7e759d9df21101bbc9f7706ec4.json  query-d9ca7d1868e85fd236628d488dca49e219f76a9910151704478ce00ede8bf6eb.json  query-de19fe44d12b7166f6557d9314b080dec8f92143ced96016582d251674f0b640.json  query-e12a3b1afb91261d664dc8179096e317274574aebb02c9d6d35cf0e0f0e3a41b.json
assets/css/: main.css  simple.css
migrations/: 001_users.down.sql  001_users.up.sql  002_user_sessions.down.sql  002_user_sessions.up.sql
src/: config.rs  encryption.rs  error.rs  main.rs  route.rs
src/db/: mod.rs  user_session.rs  users.rs
src/handler/: auth_handler.rs  middlewares.rs  mod.rs
templates/: .prettierrc  package-lock.json
templates/auth/: home.html  login.html
templates/error/: error_401.html  error_404.html
templates/layout/: base.html
templates/partials/: error.html  footer.html  messages.html  navbar.html
