[package]
name = "my-starter-app"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.99"
argon2 = "0.5.3"
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
futures = "0.3.31"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "uuid"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tower-http = { version = "0.6.6", features = [
  "fs",
  "trace",
  "compression-br",
  "compression-deflate",
  "compression-gzip",
  "compression-zstd",
] }
tower_governor = { version = "0.8.0", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
googletest = "0.14.2"
test-log = "0.2.18"
tracing-test = "0.2.5"

[lints.clippy]
pedantic = "warn"
